# maghemite

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
examples/: echo.rs
src/: bot.rs  compat.rs  error.rs  event_handler.rs  lib.rs
src/event_handler/: state.rs
