[package]
name = "maghemite"
version = "0.1.0"
authors = ["Rudi Floren <rudi.floren@gmail.com>"]
edition = "2018"
repository = "https://github.com/valkum/maghemite"
homepage = "https://github.com/valkum/maghemite"
description = "A bot framework for the matrix protocol using remu written in Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/maghemite"


[dependencies]
ruma-client = { git = "https://github.com/matrix-org/matrix-rust-sdk", ref ="4f3eaa6537de"}
ruma-api = "0.16.0-rc.2"
tokio = { version = "0.2.19", features = ["full"]}
futures = "0.3.4"
url = "2.1.1"
hyper = "0.13.5"
hyper-tls = "0.4.1"
log = "0.4.8"
aho-corasick = "0.7.10"
# rusqlite = "0.21.0"
http = "0.2.1"